fixing  newsletters page layout on mobile

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -717,10 +717,10 @@ input[name='q']::placeholder {
     border-color: #dd26a026;
     border-style: dashed;
     margin-bottom: 5em;
-    padding-bottom: 5em;
-    padding-left: 3em;
-    padding-right: 3em;
-    padding-top: 5em;
+    padding-bottom: 3em;
+    /* padding-left: 3em;
+    padding-right: 3em; */
+    padding-top: 3em;
 }
 
 
